plugins {
    id 'application' // For defining the main application
	id 'org.javamodularity.moduleplugin' version '1.8.9'
    id 'org.openjfx.javafxplugin' version '0.0.14' // JavaFX plugin
    id 'org.beryx.jlink' version '3.1.0-rc-1' // JLink plugin
}

repositories {
    mavenCentral()
}

dependencies {
	implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.1' // has no module info
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.1'
    implementation 'org.projectlombok:lombok:1.18.36'
    implementation 'org.slf4j:slf4j-api:2.0.16'
    implementation 'org.jsoup:jsoup:1.18.1'
    // implementation 'vio.github.ollama4j:ollama4j:1.0.89' // not in mavenCentral
    implementation files('libs/ollama4j-1.0.89.jar')

}

java {
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

javafx {
    version = '23.0.1' // Set the JavaFX version
    modules = ['javafx.controls', 'javafx.fxml'] // Add additional modules as needed
}

application {
    mainClass = 'de.vrauchhaupt.chatbotfx.ChatBot' // Replace with your main class
	mainModule = "chatbotfx"
    applicationDefaultJvmArgs = [
            "--add-exports=ollama4j/io.github.ollama4j.models.request=com.fasterxml.jackson.databind",
            "--add-opens=ollama4j/io.github.ollama4j=com.fasterxml.jackson.databind",
            "--add-opens=ollama4j/io.github.ollama4j.models.chat=com.fasterxml.jackson.databind",
            "--add-opens=ollama4j/io.github.ollama4j.models.generate=com.fasterxml.jackson.databind",
            "--add-opens=ollama4j/io.github.ollama4j.models.response=com.fasterxml.jackson.databind",
            "--add-opens=ollama4j/io.github.ollama4j.models.request=com.fasterxml.jackson.databind"
    ]
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    imageZip = file("${buildDir}/distributions/app-image.zip")
    launcher {
        name = 'ChatBotFx' // Name of the launcher
    }
    jpackage {
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
            imageOptions += ['--win-console']
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21 // Ensure the compiled bytecode targets Java 21
}